# MultiFileReader

./: .gitignore  CMakeLists.txt  main.cpp
src/: TsvFileHandler.cpp  TsvFileHandler.h
src/fileHandler/: TsvFileHandler.cpp  TsvFileHandler.h
src/msgGenerator/: MsgGenerator.cpp  MsgGenerator.h
src/utils/: CommonUtils.cpp  CommonUtils.h  Log.h  logger.cpp  logger.h  utils.cpp  utils.h
ut/: FileHandlerTest.cpp  LogTest.cpp  TsvFileHandlerTest.cpp
ut/testData/: test.tsv
ut/tsvFileHandlerTest/: TsvFileHandlerTest.cpp
